добавляет перехды и позиционирование

--- a/index.html
+++ b/index.html
@@ -108,13 +108,22 @@
             <h2 class="occupation-title">Чем мы занимаемся</h2>
             <ul class="occupation-list list">
                 <li class="occupation-list-img">
+                    <div class="thumb">
                     <img src="./images/image-1.jpg" alt="вёрстка" width="370" height="294">
+                <p class="label">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+                </div>
                 </li>
                 <li class="occupation-list-img">
+                    <div class="thumb">
                     <img src="./images/image-2.jpg" alt="апликации" width="370" height="294">
+                <p class="label">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+                </div>
                 </li>
                 <li class="occupation-list-img">
+                    <div class="thumb">
                     <img src="./images/image-3.jpg" alt="дизайн" width="370" height="294">
+                <p class="label">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+                </div>
                 </li>
             </ul>
             </div>
