--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="hero section">
             <div class="container">
             <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-            <button class="first-button" type="button">Заказать услугу</button>
+            <button class="first-button" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!--особенности-->
@@ -400,5 +400,16 @@
 
 </div></div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="close-button" data-modal-close>
+            <svg class="button-close-icon">
+                <use href="./images/sprite.svg#close"></use>
+            </svg>
+        </button>
+        
+        </div>
+    </div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
