установлен псевдо элемент

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <header class="header">
         <div class="container">
         <nav class="navigation">
-            <a class="logo" href="/">
+            <a class="logo current" href="/">
                 <p class="logo-header">Web<span class="logo-studio">Studio</span></p>
         </a>
         <ul class="menu list">
             <li class="menu-list-item">
-                <a class="menu-list-link" href="./index.html">Студия</a>
+                <a class="menu-list-link current" href="./index.html">Студия</a>
             </li>
             <li class="menu-list-item">
-                <a class="menu-list-link" href="./portfolio.html">Портфолио</a>
+                <a class="menu-list-link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu-list-item">
-                <a class="menu-list-link" href="">Контакты</a>
+                <a class="menu-list-link current" href="">Контакты</a>
             </li>
         </ul>
     </nav>
